# 2d-quadrotor

./: README.md  pyproject.toml
scripts/: run_hover_lqi.py  run_hover_lqr.py  run_hover_openloop.py
src/planar_quadrotor/: controllers.py  disturbances.py  dynamics.py  integrators.py  metrics.py  mixer.py  monitors.py  params.py  sim.py
