[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planar-quadrotor-gnc"
version = "0.1.0"
description = "Planar (2D) quadrotor GNC: nonlinear sim + hover linearization + LQR + metrics/monitoring"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]